--- a/public/bower.json
+++ b/public/bower.json
@@ -1,52 +1,29 @@
 {
-
   "name": "koda",
-
   "homepage": "https://github.com/amitrsingh1992/koda",
-
   "authors": [
-
-              "singh.amit.10ee1074@gmail.com"
-  
-      ],
-
+    "singh.amit.10ee1074@gmail.com"
+  ],
   "description": "Blockly Based Program",
-
   "main": "index.html",
-
   "keywords": [
     "Blockly",
     "Games"
   ],
-
   "license": "MIT",
-
   "private": true,
-
   "ignore": [
- 
-   "**/.*",
-
+    "**/.*",
     "node_modules",
-
     "bower_components",
-
     "test",
-
     "tests"
-
   ],
-
   "dependencies": {
-
     "angular": "^1.6.4",
-
     "jquery": "^3.2.1",
-
     "bootstrap": "^3.3.7",
-
-    "angular-ui-router": "^0.4.2"
-
-     }
-
+    "angular-ui-router": "^0.4.2",
+    "font-awesome": "^4.7.0"
+  }
 }
